[tool.poetry]
name = "dkron-python"
version = "0.7.8"
description = ""
authors = ["Pawel Olejniczak <pawel.olejniczak@gmail.com>", "Denis Roussel <droussel@centreon.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/centreon/dkron-python"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Information Technology",
        "Programming Language :: Python :: 3",
        "Environment :: Console",
        "Topic :: System :: Clustering",
        "Topic :: System :: Distributed Computing",
    ]

[tool.poetry.dependencies]
python = ">=3.8,<4"
requests = ">=2.26.0"
urllib3 = ">=2.0"
typer = {extras = ["all"], version = ">=0.6.1"}

[tool.poetry.dev-dependencies]
requests-mock = "^1.9.3"
nose = "^1.3.7"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dkron-cli = "dkron_python.cli:app"
